--- a/.env
+++ b/.env
@@ -27,6 +27,13 @@ APP_SECRET=eda8551b31ba3152a7f0e0c0650763dd
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
- DATABASE_URL="mysql://root:@127.0.0.1:3306/pharm?serverVersion=5.7"
+ DATABASE_URL="mysql://root:@127.0.0.1:3306/pharm?"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=gmail://siwar.guermassi@esprit.tn:203JFT2696@localhost
+###< symfony/swiftmailer-bundle ###
